Fix spacing

--- a/settings-ui/src/components/BoxBtn.sass
+++ b/settings-ui/src/components/BoxBtn.sass
@@ -38,4 +38,4 @@
 
 .btnRow
     display: flex
-    gap: 1em
+    gap: 0.5em
